--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Users</h1>
+<h1>Listing users</h1>
 
 <table>
   <thead>
-    <tr>
-      <th>Login</th>
-      <th>Password</th>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
-  <tbody>
-    <% @users.each do |user| %>
+  <% @users.each do |user| %>
       <tr>
-        <td><%= user.login %></td>
-        <td><%= user.password %></td>
         <td><%= user.name %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', user, method: :delete,
+                        data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
-  </tbody>
+  <% end %>
 </table>
 
 <br>
