--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -18,8 +18,7 @@
       <tr>
         <td><%= holiday.start_date %></td>
         <td><%= holiday.end_date %></td>
-        <td><%= holiday.description %></td>
-        <td><%= holiday.user_id %></td>
+        <td><%= holiday.content %></td>
         <td><%= link_to 'Show', holiday %></td>
         <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
         <td><%= link_to 'Destroy', holiday, method: :delete, data: { confirm: 'Are you sure?' } %></td>
