--- a/app/views/admin_holidays/_form.html.erb
+++ b/app/views/admin_holidays/_form.html.erb
@@ -12,16 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :start_date %><br>
-    <%= f.date_select :start_date %>
-  </div>
-  <div class="field">
-    <%= f.label :end_date %><br>
-    <%= f.date_select :end_date %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+    <ol>
+      <li><%= f.radio_button :status, "Pending" %> Pending</li>
+      <li><%= f.radio_button :status, "Confirmed" %> Confirmed</li>
+      <li><%= f.radio_button :status, "Canceled" %> Canceled</li>
+    </ol>
   </div>
 
   <div class="actions">
