--- a/app/views/admin_holidays/edit.html.erb
+++ b/app/views/admin_holidays/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @holiday %> |
-<%= link_to 'Back', holidays_path %>
+<%= link_to 'Show', holidays_path(@holiday) %> |
+<%= link_to 'Back', admin_holidays_path %>
