--- a/app/views/admin_holidays/index.html.erb
+++ b/app/views/admin_holidays/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Holidays</h1>
+<h1>Listing All Holidays</h1>
 
-<table>
+<table style="width:100%">
   <thead>
     <tr>
       <th>Start date</th>
       <th>End date</th>
-      <th>Description</th>
+      <th>Content</th>
       <th>User</th>
       <th>Status</th>
       <th colspan="3"></th>
@@ -20,10 +20,11 @@
         <td><%= holiday.start_date %></td>
         <td><%= holiday.end_date %></td>
         <td><%= holiday.content %></td>
+        <td><%= holiday.user.name %></td>
         <td><%= holiday.status %></td>
-        <td><%= link_to 'Show', holiday %></td>
-        <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
-        <td><%= link_to 'Destroy', holiday, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', admin_holiday_path(holiday) %></td>
+        <td><%= link_to 'Change Status', edit_admin_holiday_path(holiday) %></td>
+        <td><%= link_to 'Destroy', admin_holiday_path(holiday), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -31,4 +32,3 @@
 
 <br>
 
-<%= link_to 'New Holiday', new_holiday_path %>
