--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -17,7 +17,12 @@
 
 <p>
   <strong>User:</strong>
-  <%= @holiday.user_id %>
+  <%= @holiday.user.name%>
+</p>
+
+<p>
+  <strong>Status:</strong>
+  <%= @holiday.status %>
 </p>
 
 <%= link_to 'Edit', edit_holiday_path(@holiday) %> |
