--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,6 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -16,13 +15,14 @@
               </ul>
             </li>
             <% if current_user.manager? %>
+                <% num_pending_holiday = @holidays_pending %>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    Admin Acess <b class="caret"></b>
+                    Admin Acess (<%= num_pending_holiday %>) <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
                     <li><%= link_to "Users Settings", users_path %></li>
-                    <li><%= link_to "Holiday Settings", holidays_path %></li>
+                    <li><%= link_to "Holiday Settings (#{num_pending_holiday})", admin_holidays_path %></li>
 
                   </ul>
                 </li>
