--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -11,16 +11,14 @@
   <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show',  admin_user_path(user) %></td>
+        <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete,
-                        data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
   <% end %>
 </table>
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
-
+<%= link_to 'New User', new_admin_user_path %>
 
