--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
                     Admin Acess (<%= num_pending_holiday %>) <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
-                    <li><%= link_to "Users Settings", users_path %></li>
+                    <li><%= link_to "Users Settings", admin_users_path %></li>
                     <li><%= link_to "Holiday Settings (#{num_pending_holiday})", admin_holidays_path %></li>
 
                   </ul>
