--- a/app/views/admin_holidays/_form.html.erb
+++ b/app/views/admin_holidays/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@holiday) do |f| %>
+<%= form_for(@holiday, :url => admin_holiday_path(@holiday)) do |f| %>
   <% if @holiday.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@holiday.errors.count, "error") %> prohibited this holiday from being saved:</h2>
