--- a/app/views/admin_users/edit.html.erb
+++ b/app/views/admin_users/edit.html.erb
@@ -1,6 +1,43 @@
 <h1>Editing User</h1>
 
-<%= render 'form' %>
+<%= form_for @user, :url => admin_user_path(@user)  do |f| %>
+    <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this holiday from being saved:</h2>
 
-<%= link_to 'Show', admin_user_path(@user) %> |
-<%= link_to 'Back', admin_users_path%>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <p>
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </p>
+
+    <p>
+      <%= f.label :login %><br>
+      <%= f.text_field :login %>
+    </p>
+
+    <div class="field">
+      <p>
+        <%= f.label :manager%>
+        <%= f.radio_button :manager, FALSE %> FALSE
+        <%= f.radio_button :manager, TRUE %> TRUE
+      </p>
+    </div>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+
+<% end %>
+
+
+
+<%= link_to 'Show', admin_user_path(@user) %>
+<%= link_to 'Back', admin_users_path %>
