--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Holidays of </h1>
+<h1>Listing Holidays of <%= current_user.name %></h1>
 
 <table style="width:100%">
   <thead>
