--- a/app/views/admin_holidays/show.html.erb
+++ b/app/views/admin_holidays/show.html.erb
@@ -26,4 +26,4 @@
 </p>
 
 <%= link_to 'Edit', edit_admin_holiday_path(@holiday) %> |
-<%= link_to 'Back', admin_holidays_path %>
+<%= link_to 'Home', current_user %>
