--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -1,10 +1,21 @@
 <h1>Listing users</h1>
 
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    th, td {
+        padding: 5px;
+        text-align: center;
+    }
+</style>
+
 <table style="width:100%">
   <thead>
   <tr>
     <th>Name</th>
-    <th colspan="3"></th>
+    <th colspan="3">Settings</th>
   </tr>
   </thead>
 
