--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -2,15 +2,26 @@
 
 <h1>Listing Holidays of <%= current_user.name %></h1>
 
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    th, td {
+        padding: 5px;
+        text-align: center;
+    }
+</style>
+
 <table style="width:100%">
   <thead>
     <tr>
       <th>Start date</th>
       <th>End date</th>
-      <th>Description</th>
-      <th>User</th>
+      <th>Content</th>
       <th>Status</th>
-      <th colspan="3"></th>
+      <th>User</th>
+      <th colspan="3">Settings</th>
     </tr>
   </thead>
 
@@ -21,6 +32,7 @@
         <td><%= holiday.end_date %></td>
         <td><%= holiday.content %></td>
         <td><%= holiday.status %></td>
+        <td><%= holiday.user.name %></td>
         <td><%= link_to 'Show', holiday %></td>
         <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
         <td><%= link_to 'Destroy', holiday, method: :delete, data: { confirm: 'Are you sure?' } %></td>
