--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,12 +10,12 @@
                 Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Holidays", holidays_path %></li>
-                <li><%= link_to "Settings", '#' %></li>
+                <li><%= link_to "My Holidays", holidays_path %></li>
+                <li><%= link_to "Change my Password", edit_user_path(current_user) %></li>
               </ul>
             </li>
             <% if current_user.manager? %>
-                <% num_pending_holiday = @holidays_pending %>
+                <% num_pending_holiday = count_holidays_pending %>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     Admin Acess (<%= num_pending_holiday %>) <b class="caret"></b>
