--- a/app/views/admin_holidays/index.html.erb
+++ b/app/views/admin_holidays/index.html.erb
@@ -2,105 +2,7 @@
 
 <h1>Listing All Holidays</h1>
 
-<style>
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-    th, td {
-        padding: 5px;
-        text-align: center;
-    }
-</style>
-
-<h2>Pending Holidays</h2>
-
-<table style="width:100%">
-  <thead>
-    <tr>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Content</th>
-      <th>User</th>
-      <th>Status</th>
-      <th colspan="3">Settings</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @holidays_pending.each do |holiday| %>
-      <tr>
-        <td><%= holiday.start_date %></td>
-        <td><%= holiday.end_date %></td>
-        <td><%= holiday.content %></td>
-        <td><%= holiday.user.name %></td>
-        <td><%= holiday.status %></td>
-        <td><%= link_to 'Show', admin_holiday_path(holiday) %></td>
-        <td><%= link_to 'Change Status', edit_admin_holiday_path(holiday) %></td>
-        <td><%= link_to 'Destroy', admin_holiday_path(holiday), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<h2>Confirmed Holidays</h2>
-
-<table style="width:100%">
-    <tr>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Content</th>
-      <th>User</th>
-      <th>Status</th>
-      <th colspan="3">Settings</th>
-    </tr>
-
-
-  <tbody>
-  <% @holidays_confirmed.each do |holiday| %>
-      <tr>
-        <td><%= holiday.start_date %></td>
-        <td><%= holiday.end_date %></td>
-        <td><%= holiday.content %></td>
-        <td><%= holiday.user.name %></td>
-        <td><%= holiday.status %></td>
-        <td><%= link_to 'Show', admin_holiday_path(holiday) %></td>
-        <td><%= link_to 'Change Status', edit_admin_holiday_path(holiday) %></td>
-        <td><%= link_to 'Destroy', admin_holiday_path(holiday), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
-
-<h2>Canceled Holidays</h2>
-
-<table style="width:100%">
-  <thead>
-  <tr>
-    <th>Start date</th>
-    <th>End date</th>
-    <th>Content</th>
-    <th>User</th>
-    <th>Status</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @holidays_canceled.each do |holiday| %>
-      <tr>
-        <td><%= holiday.start_date %></td>
-        <td><%= holiday.end_date %></td>
-        <td><%= holiday.content %></td>
-        <td><%= holiday.user.name %></td>
-        <td><%= holiday.status %></td>
-        <td><%= link_to 'Show', admin_holiday_path(holiday) %></td>
-        <td><%= link_to 'Change Status', edit_admin_holiday_path(holiday) %></td>
-        <td><%= link_to 'Destroy', admin_holiday_path(holiday), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
-
-<br>
+<%= render 'holidays_table', :collection => @holidays = @holidays_pending %>
+<%= render 'holidays_table', :collection => @holidays = @holidays_confirmed %>
+<%= render 'holidays_table', :collection => @holidays = @holidays_canceled %>
 
