--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -15,6 +15,8 @@
   <thead>
   <tr>
     <th>Name</th>
+    <th>Login</th>
+    <th>Manager</th>
     <th colspan="3">Settings</th>
   </tr>
   </thead>
@@ -22,6 +24,8 @@
   <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
+        <td><%= user.login %></td>
+        <td><%= user.manager? %></td>
         <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
