--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -12,32 +12,39 @@
         text-align: center;
     }
 </style>
+<%if (@holidays.first != nil) then %>
 
-<table style="width:100%">
-  <thead>
-    <tr>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Content</th>
-      <th>Status</th>
-      <th>User</th>
-      <th colspan="3">Settings</th>
-    </tr>
-  </thead>
-
+    <table style="width:100%">
+      <tr>
+        <th>Start date</th>
+        <th>End date</th>
+        <th>Content</th>
+        <th>User</th>
+        <th>Status</th>
+        <th>Days to Start</th>
+        <th>Days to End</th>
+        <th>Total of Days</th>
+        <th>Current?</th>
+        <th colspan="3">Settings</th>
+      </tr>
+<%end%>
   <tbody>
     <% @holidays.each do |holiday| %>
       <tr>
         <td><%= holiday.start_date %></td>
         <td><%= holiday.end_date %></td>
         <td><%= holiday.content %></td>
-        <td><%= holiday.status %></td>
         <td><%= holiday.user.name %></td>
+        <td><%= holiday.status %></td>
+        <td><%= (holiday.start_date - Date.today).to_s.chomp('/1')  %></td>
+        <td><%= (holiday.end_date - Date.today).to_s.chomp('/1') %></td>
+        <td><%= (holiday.end_date - holiday.start_date).to_s.chomp('/1')  %></td>
+        <td><%= if (holiday.start_date <= Date.today) && (holiday.start_date >= Date.today) then true else false end %></td>
         <td><%= link_to 'Show', holiday %></td>
         <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
         <td><%= link_to 'Destroy', holiday, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
