Many things update

--- a/app/views/admin_users/edit.html.erb
+++ b/app/views/admin_users/edit.html.erb
@@ -19,7 +19,7 @@
     </p>
 
     <p>
-      <%= f.label :login %><br>
+      <%= f.label "Login (must to be an email)" %><br>
       <%= f.text_field :login %>
     </p>
 
