--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -11,13 +11,28 @@
     </div>
   <% end %>
 
-  <div class="field">
+    <% if @alert_box == true %>
+        <div id="dialog-confirm"></div>
+        <script>
+            alert("Occurred a conflict with the follow Holliday(s):\n" +
+                    <% @holiday_exist.each do |holiday| %>
+                    "\n User Name:<%= holiday.user.name %>" +
+                    "\n Start Date:<%= holiday.start_date.strftime("%d/%m/%y") %>" +
+                    "\n End Date:<%= holiday.end_date %>" +
+                    "\n Content:<%= holiday.content %> \n" +
+                    <% end %>
+                "\n Please delete these Holiday(s) first. ")
+
+        </script>
+    <% end %>
+
+    <div class="field">
     <%= f.label :start_date %><br>
-    <%= f.date_select :start_date %>
+    <%= f.date_select(:start_date, order: [:day, :month, :year]) %>
   </div>
   <div class="field">
     <%= f.label :end_date %><br>
-    <%= f.date_select :end_date %>
+    <%= f.date_select(:start_date, order: [:day, :month, :year])%>
   </div>
   <div class="field">
     <%= f.label :content %><br>
@@ -28,3 +43,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+
