--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
                 </li>
             <% end %>
             <li>
-              <%= link_to "Log out", logout_path , method: "delete" %>
+              <%= link_to "Log out", logout_path %>
             </li>
         <% else %>
             <li><%= link_to "Log in", login_path %></li>
