--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -96,3 +96,24 @@ footer {
     }
   }
 }
+
+
+//Minha parte
+.notice, .danger, .warning, .info {
+  font-weight: bold;
+  margin: -10px 0 15px 0;
+  padding: 5px 5px 5px 27px;
+}
+
+.notice {
+  border: 1px solid #9c9;
+  background: #e2f9e3 url('images/wrong.png') no-repeat 5px center;
+  color: #060;
+}
+
+.danger {
+  border: 1px solid #c68484;
+  background: #fcc url('../images/wrong.png') no-repeat 5px center;
+  color: #c00;
+}
+
