--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 <%= render 'layouts/header' %>
     <% flash.each do |message_type, message| %>
-        <div class="<%= message_type %>"><%= message %></div>
+        <div class="<%= message_type %>"><%= message.html_safe %></div>
     <% end %>
 <div class="container">
   <%= yield %>
