--- a/app/views/admin_holidays/show.html.erb
+++ b/app/views/admin_holidays/show.html.erb
@@ -49,6 +49,10 @@ if (days_end.to_i <= 0) then days_end = "-" end %>
   <%= if (days_start == "-" && days_end != "-") then true else false end %>
 </p>
 
-<%= link_to 'Change Status', edit_admin_holiday_path(@holiday) %> |
+<% if @holiday.user == current_user %>
+    <%= link_to 'Edit', edit_holiday_path(@holiday) %> |
+<% else %>
+    <%= link_to 'Change Status', edit_admin_holiday_path(@holiday) %> |
+<% end %>
 <%= link_to 'Holiday Settings', admin_holidays_path %> |
-<%= link_to 'Home', root_url %>
+<%= link_to 'Callendar', root_url %>
