--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -51,5 +51,5 @@
 
 <%= link_to 'Edit', edit_holiday_path(@holiday) if current_user == @holiday.user %> |
 <%= link_to 'My Holidays', holidays_path %> |
-<%= link_to 'Home', @holiday.user %>
+<%= link_to 'Callendar', root_url %>
 
