--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -1,16 +1,31 @@
 <h1>Listing users</h1>
 
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    th, td {
+        padding: 5px;
+        text-align: center;
+    }
+</style>
+
 <table style="width:100%">
   <thead>
   <tr>
     <th>Name</th>
-    <th colspan="3"></th>
+    <th>Login</th>
+    <th>Manager</th>
+    <th colspan="3">Settings</th>
   </tr>
   </thead>
 
   <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
+        <td><%= user.login %></td>
+        <td><%= user.manager? %></td>
         <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
