--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -11,13 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
+    <div class="field">
     <%= f.label :start_date %><br>
-    <%= f.date_select :start_date %>
+    <%= f.date_select(:start_date, order: [:day, :month, :year]) %>
   </div>
   <div class="field">
     <%= f.label :end_date %><br>
-    <%= f.date_select :end_date %>
+    <%= f.date_select(:end_date, order: [:day, :month, :year])%>
   </div>
   <div class="field">
     <%= f.label :content %><br>
@@ -28,3 +28,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+
