--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,31 +1,55 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Holidays of <%= current_user.name %></h1>
 
-<table style="width:100%">
-  <thead>
-    <tr>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Description</th>
-      <th>User</th>
-      <th>Status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    th, td {
+        padding: 5px;
+        text-align: center;
+    }
+</style>
+<%if (@holidays.first != nil) then %>
 
+    <table style="width:100%">
+      <tr>
+        <th>Start date</th>
+        <th>End date</th>
+        <th>Content</th>
+        <th>User</th>
+        <th>Status</th>
+        <th>Days to Start</th>
+        <th>Days to End</th>
+        <th>Total of Days</th>
+        <th>Current?</th>
+        <th colspan="3">Settings</th>
+      </tr>
+<%end%>
   <tbody>
     <% @holidays.each do |holiday| %>
+
+      <% days_start = (holiday.start_date - Date.today).to_s.chomp('/1')
+         days_end = (holiday.end_date - Date.today + 1).to_s.chomp('/1')
+         days_total = (holiday.end_date - holiday.start_date + 1).to_s.chomp('/1')
+         if (days_start.to_i <= 0) then days_start = "-" end
+         if (days_end.to_i <= 0) then days_end = "-" end
+      %>
       <tr>
-        <td><%= holiday.start_date %></td>
-        <td><%= holiday.end_date %></td>
+        <td><%= holiday.start_date.strftime("%d/%m/%y") %></td>
+        <td><%= holiday.end_date.strftime("%d/%m/%y") %></td>
         <td><%= holiday.content %></td>
+        <td><%= holiday.user.name %></td>
         <td><%= holiday.status %></td>
+        <td><%= days_start  %></td>
+        <td><%= days_end %></td>
+        <td><%= days_total  %></td>
+        <td><%= if (days_start == "-" && days_end != "-") then true else false end %></td>
         <td><%= link_to 'Show', holiday %></td>
         <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
         <td><%= link_to 'Destroy', holiday, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
