--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,19 +3,19 @@
     <%= link_to "Studiare Holidays APP", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Callendar", root_path %></li>
         <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Holidays", holidays_path %></li>
-                <li><%= link_to "Settings", '#' %></li>
+                <li><%= link_to "My Holidays", holidays_path %></li>
+                <li><%= link_to "Change my Password", edit_user_path(current_user) %></li>
               </ul>
             </li>
             <% if current_user.manager? %>
-                <% num_pending_holiday = @holidays_pending %>
+                <% num_pending_holiday = count_holidays_pending %>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     Admin Acess (<%= num_pending_holiday %>) <b class="caret"></b>
@@ -28,7 +28,7 @@
                 </li>
             <% end %>
             <li>
-              <%= link_to "Log out", logout_path , method: "delete" %>
+              <%= link_to "Log out", logout_path %>
             </li>
         <% else %>
             <li><%= link_to "Log in", login_path %></li>
