change layout of view tables of holidays

--- a/app/views/admin_holidays/_holidays_table.html.erb
+++ b/app/views/admin_holidays/_holidays_table.html.erb
@@ -34,8 +34,10 @@
         <% days_start = (holiday.start_date - Date.today).to_s.chomp('/1')
            days_end = (holiday.end_date - Date.today + 1).to_s.chomp('/1')
            days_total = (holiday.end_date - holiday.start_date + 1).to_s.chomp('/1')
+           current = false
+           if (days_start.to_i <= 0 && days_end.to_i > 0) then current = true end
            if (days_start.to_i <= 0) then days_start = "-" end
-           if (days_end.to_i <= 0) then days_end = "-" end
+           if (current == false) then days_end = "-" end
         %>
         <tr>
           <td><%= holiday.start_date.strftime("%d/%m/%y") %></td>
@@ -46,7 +48,7 @@
           <td><%= days_start  %></td>
           <td><%= days_end %></td>
           <td><%= days_total %></td>
-          <td><%= if (days_start == "-" && days_end != "-") then true else false end %>
+          <td><%= current %>
           <td><%= link_to 'Show', admin_holiday_path(holiday) %></td>
           <% if holiday.user == current_user %>
               <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
