--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -32,8 +32,10 @@
       <% days_start = (holiday.start_date - Date.today).to_s.chomp('/1')
          days_end = (holiday.end_date - Date.today + 1).to_s.chomp('/1')
          days_total = (holiday.end_date - holiday.start_date + 1).to_s.chomp('/1')
+         current = false
+         if (days_start.to_i <= 0 && days_end.to_i > 0) then current = true end
          if (days_start.to_i <= 0) then days_start = "-" end
-         if (days_end.to_i <= 0) then days_end = "-" end
+         if (current == false) then days_end = "-" end
       %>
       <tr>
         <td><%= holiday.start_date.strftime("%d/%m/%y") %></td>
@@ -44,7 +46,7 @@
         <td><%= days_start  %></td>
         <td><%= days_end %></td>
         <td><%= days_total  %></td>
-        <td><%= if (days_start == "-" && days_end != "-") then true else false end %></td>
+        <td><%= current %></td>
         <td><%= link_to 'Show', holiday %></td>
         <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
         <td><%= link_to 'Destroy', holiday, method: :delete, data: { confirm: 'Are you sure?' } %></td>
