--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -17,6 +17,7 @@
     <th>Name</th>
     <th>Login</th>
     <th>Manager</th>
+    <th>Total Days of Holidays</th>
     <th colspan="3">Settings</th>
   </tr>
   </thead>
@@ -26,6 +27,7 @@
         <td><%= user.name %></td>
         <td><%= user.login %></td>
         <td><%= user.manager? %></td>
+        <td><%= holidays_count(user) %></td>
         <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
