--- a/app/views/admin_holidays/_holidays_table.html.erb
+++ b/app/views/admin_holidays/_holidays_table.html.erb
@@ -23,6 +23,7 @@
         <th>Days to Start</th>
         <th>Days to End</th>
         <th>Total of Days</th>
+        <th>Total of Business Days</th>
         <th>Current?</th>
         <th colspan="3">Settings</th>
       </tr>
@@ -34,6 +35,7 @@
         <% days_start = (holiday.start_date - Date.today).to_s.chomp('/1')
            days_end = (holiday.end_date - Date.today + 1).to_s.chomp('/1')
            days_total = (holiday.end_date - holiday.start_date + 1).to_s.chomp('/1')
+           days_total_business = business_days_between(holiday.start_date, holiday.end_date)
            current = false
            if (days_start.to_i <= 0 && days_end.to_i > 0) then current = true end
            if (days_start.to_i <= 0) then days_start = "-" end
@@ -48,6 +50,7 @@
           <td><%= days_start  %></td>
           <td><%= days_end %></td>
           <td><%= days_total %></td>
+          <td><%= days_total_business %></td>
           <td><%= current %>
           <td><%= link_to 'Show', admin_holiday_path(holiday) %></td>
           <% if holiday.user == current_user %>
