--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -17,7 +17,7 @@
     <th>Name</th>
     <th>Login</th>
     <th>Manager</th>
-    <th>Total Days of Holidays</th>
+    <th>Total Business Days of Holidays</th>
     <th colspan="3">Settings</th>
   </tr>
   </thead>
