--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Holidays of <%= current_user.name %></h1>
 
+<div id="calendar" class="small-calendar" holidays="<%= @holidays.to_json %>"></div>
+
 <style>
     table, th, td {
         border: 1px solid black;
