--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Total Business Days of <%= current_user.name %> Holidays: <%= holidays_count(current_user)%></h2>
+<h2>Total Business Days of <%= current_user.name %> Holidays Confirmed: <%= holidays_count(current_user)%></h2>
 
 <h1>Listing Holidays of <%= current_user.name %></h1>
 
