Fix grammar and optimized the code

--- a/app/views/admin_holidays/show.html.erb
+++ b/app/views/admin_holidays/show.html.erb
@@ -1,13 +1,3 @@
-<% days_start = (@holiday.start_date - Date.today).to_s.chomp('/1')
-days_end = (@holiday.end_date - Date.today + 1).to_s.chomp('/1')
-days_total = (@holiday.end_date - @holiday.start_date + 1).to_s.chomp('/1')
-days_total_business = business_days_between(@holiday.start_date, @holiday.end_date)
-current = false
-if (days_start.to_i <= 0 && days_end.to_i > 0) then current = true end
-if (days_start.to_i <= 0) then days_start = "-" end
-if (current == false) then days_end = "-" end
-%>
-
 <p>
   <strong>Start date:</strong>
   <%= @holiday.start_date.strftime("%d/%m/%y") %>
@@ -35,27 +25,27 @@ if (current == false) then days_end = "-" end
 
 <p>
   <strong>Days to Start:</strong>
-  <%= days_start  %>
+  <%= @holiday.get_days_to_start  %>
 </p>
 
 <p>
   <strong>Days to End:</strong>
-  <%= days_end  %>
+  <%= @holiday.get_days_to_end  %>
 </p>
 
 <p>
   <strong>Total of Days:</strong>
-  <%= days_total  %>
+  <%= @holiday.get_days_total  %>
 </p>
 
 <p>
   <strong>Total of Business Days:</strong>
-  <%= days_total_business  %>
+  <%= @holiday.get_days_total_business %>
 </p>
 
 <p>
   <strong>Current?</strong>
-  <%= current %>
+  <%= @holiday.current? %>
 </p>
 
 <% if @holiday.user == current_user %>
