--- a/app/views/admin_holidays/_holidays_table.html.erb
+++ b/app/views/admin_holidays/_holidays_table.html.erb
@@ -31,27 +31,17 @@
 
     <tbody>
     <% @holidays.each do |holiday| %>
-
-        <% days_start = (holiday.start_date - Date.today).to_s.chomp('/1')
-           days_end = (holiday.end_date - Date.today + 1).to_s.chomp('/1')
-           days_total = (holiday.end_date - holiday.start_date + 1).to_s.chomp('/1')
-           days_total_business = business_days_between(holiday.start_date, holiday.end_date)
-           current = false
-           if (days_start.to_i <= 0 && days_end.to_i > 0) then current = true end
-           if (days_start.to_i <= 0) then days_start = "-" end
-           if (current == false) then days_end = "-" end
-        %>
         <tr>
           <td><%= holiday.start_date.strftime("%d/%m/%y") %></td>
           <td><%= holiday.end_date.strftime("%d/%m/%y") %></td>
           <td><%= holiday.content %></td>
           <td><%= holiday.user.name %></td>
           <td><%= holiday.status %></td>
-          <td><%= days_start  %></td>
-          <td><%= days_end %></td>
-          <td><%= days_total %></td>
-          <td><%= days_total_business %></td>
-          <td><%= current %>
+          <td><%= holiday.get_days_to_start %></td>
+          <td><%= holiday.get_days_to_end %></td>
+          <td><%= holiday.get_days_total %></td>
+          <td><%= holiday.get_days_total_business %></td>
+          <td><%= holiday.current? %></td>
           <td><%= link_to 'Show', admin_holiday_path(holiday) %></td>
           <% if holiday.user == current_user %>
               <td><%= link_to 'Edit', edit_holiday_path(holiday) %></td>
