--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -27,7 +27,7 @@
         <td><%= user.name %></td>
         <td><%= user.login %></td>
         <td><%= user.manager? %></td>
-        <td><%= holidays_count(user) %></td>
+        <td><%= user.get_all_days_holidays_business %></td>
         <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
