--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-<h1>Callendar of Holidays</h1>
+<h1>General Calendar of Holidays</h1>
 
 <div id="calendar" holidays="<%= @holidays.to_json %>"></div>
