--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Listing users</h1>
 
+<center><%= link_to 'New User', new_admin_user_path,  class: 'btn_submit', style:'color:#FFFFFF;' %></center>
+</br>
+
 <style>
     table, th, td {
         border: 1px solid black;
@@ -37,5 +40,5 @@
 
 <br>
 
-<%= link_to 'New User', new_admin_user_path %>
+
 
