--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -139,6 +139,72 @@ footer {
 #calendar.small-calendar
 {
   width: 500px;
-  height: 500px;
+  height: 450px;
   margin: 0 auto;
+}
+
+.btn_submit {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  text-shadow: 1px 1px 3px #666666;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 8px 10px 8px 11px;
+  text-decoration: none;
+}
+
+.btn_submit:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.btn_link {
+  background: #b2b9bd;
+  background-image: -webkit-linear-gradient(top, #b2b9bd, #858585);
+  background-image: -moz-linear-gradient(top, #b2b9bd, #858585);
+  background-image: -ms-linear-gradient(top, #b2b9bd, #858585);
+  background-image: -o-linear-gradient(top, #b2b9bd, #858585);
+  background-image: linear-gradient(to bottom, #b2b9bd, #858585);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  text-shadow: 1px 1px 3px #666666;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Arial;
+  font-size: 16px;
+  padding: 2px 4px 2px 4px;
+  text-decoration: none;
+}
+
+.btn_link:hover {
+  background: #8f9294;
+  background-image: -webkit-linear-gradient(top, #8f9294, #373838);
+  background-image: -moz-linear-gradient(top, #8f9294, #373838);
+  background-image: -ms-linear-gradient(top, #8f9294, #373838);
+  background-image: -o-linear-gradient(top, #8f9294, #373838);
+  background-image: linear-gradient(to bottom, #8f9294, #373838);
+  text-decoration: none;
+}
+
+center{
+  text-align: center;
+  color: white;
 }
