--- a/app/views/admin_holidays/edit.html.erb
+++ b/app/views/admin_holidays/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', holidays_path(@holiday) %> |
-<%= link_to 'Back', admin_holidays_path %>
+<%= link_to 'Show', holidays_path(@holiday), class:'btn_link' %>
+<%= link_to 'Back', admin_holidays_path, class:'btn_link'  %>
