--- a/app/views/admin_users/edit.html.erb
+++ b/app/views/admin_users/edit.html.erb
@@ -32,12 +32,12 @@
     </div>
 
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit class: 'btn_submit' %>
     </div>
 
 <% end %>
 
 
 
-<%= link_to 'Show', admin_user_path(@user) %>
-<%= link_to 'Back', admin_users_path %>
+<%= link_to 'Show', admin_user_path(@user), class: 'btn_link' %>
+<%= link_to 'Back', admin_users_path, class: 'btn_link' %>
