--- a/app/views/admin_users/new.html.erb
+++ b/app/views/admin_users/new.html.erb
@@ -32,11 +32,11 @@
     </div>
 
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit class: 'btn_submit'%>
     </div>
 
 <% end %>
 
 
 
-<%= link_to 'Back', admin_users_path %>
+<%= link_to 'Back', admin_users_path, class:'btn_link' %>
