--- a/app/views/admin_users/show.html.erb
+++ b/app/views/admin_users/show.html.erb
@@ -13,5 +13,5 @@
   <%= @user.manager %>
 </p>
 
-<%= link_to 'Edit', edit_admin_user_path(@user) %> |
-<%= link_to 'Back', admin_users_path %>
+<%= link_to 'Edit', edit_admin_user_path(@user), class: 'btn_link' %> 
+<%= link_to 'Back', admin_users_path, class: 'btn_link' %>
