--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -28,11 +28,11 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn_submit' %>
   </div>
 <% end %>
 
-  <%= link_to 'Back', holidays_path %>
+  <%= link_to 'Back', holidays_path, class: 'btn_link' %>
 
 </div>
 
