Fix email message

--- a/app/views/user_mailer/holiday_notification.text.erb
+++ b/app/views/user_mailer/holiday_notification.text.erb
@@ -1,5 +1,5 @@
 Hi <%= @admin.name %>,
 
-A new Holiday Pending had created! Click on the link below to see this holiday:
+A new Holiday Pending was created! Click on the link below to see this holiday:
 
 <%= holiday_path(@holiday) %>
