--- a/app/views/user_mailer/holiday_notification.html.erb
+++ b/app/views/user_mailer/holiday_notification.html.erb
@@ -2,13 +2,63 @@
 
 <p>Hi <%= @admin.name %>,</p>
 
-<p>A new Holiday of <%= @holiday.user.name %> had created!</p>
+<p>A new Holiday of <%= @holiday.user.name %> was created!</p>
+----------------Info--------------------
+<p>
+  <strong>Start date:</strong>
+  <%= @holiday.start_date.strftime("%d/%m/%y") %>
+</p>
 
+<p>
+  <strong>End date:</strong>
+  <%= @holiday.end_date.strftime("%d/%m/%y") %>
+</p>
+
+<p>
+  <strong>Content:</strong>
+  <%= @holiday.content %>
+</p>
+
+<p>
+  <strong>User:</strong>
+  <%= @holiday.user.name %>
+</p>
+
+<p>
+  <strong>Status:</strong>
+  <%= @holiday.status %>
+</p>
+
+<p>
+  <strong>Days to Start:</strong>
+  <%= @holiday.get_days_to_start  %>
+</p>
+
+<p>
+  <strong>Days to End:</strong>
+  <%= @holiday.get_days_to_end  %>
+</p>
+
+<p>
+  <strong>Total of Days:</strong>
+  <%= @holiday.get_days_total  %>
+</p>
+
+<p>
+  <strong>Total of Business Days:</strong>
+  <%= @holiday.get_days_total_business %>
+</p>
+
+<p>
+  <strong>Current?</strong>
+  <%= @holiday.current? %>
+</p>
+----------------Info--------------------
 <p>
   Please, <%= link_to "Click here", @holiday %> to change the status of this holiday!
 </p>
 
 <p>
   Att,<br/>
-  Hi <%= @admin.name %>,
+  Holiday Manager
 </p>
